viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
/* ... */
.nav-tabs {
    margin-bottom: 0;
}

.tabGroups > .row {
    padding-bottom: 10px;
}

.tabbable {
    padding-bottom: 10px;
}

.additionalLinkListDropDown ul.dropdown-menu li.additionalLinkItem {
    width: 100%;
}
.additionalLinkListDropDown ul.dropdown-menu {
    padding-top: 0%;
    padding-bottom: 0%;
}

/* cheap and nasty; ought really to suppress in Java code ... */
.propertyEditForm .additionalLinkList {
    display: none;
}

.choicesScalarValue {
    width: 95%;
    display: inline-block;
}

.associatedActionLinksRight .additionalLinkListDropDown {
    padding-right: 11px;
}

.multiLineStringPanel .scalarValueInput .editing .edit {
    margin-top: -30px;
}

.referencePanel .scalarValueInput .editing .edit,
.isisBlobPanel .scalarValueInput .editing .edit,
.isisClobPanel .scalarValueInput .editing .edit,
.booleanPanel .scalarValueInput .editing .edit {
    margin-top: 0px;
}

.actions-right .scalarPlaceholder .scalarValueInput {
    width: 90%;
    float: left;
    margin-bottom: 0px;
}

.characterPanel .actions-right .scalarPlaceholder .scalarValueInput {
    margin-bottom: 4px;
}
.multiLineStringPanel .actions-right .scalarPlaceholder .scalarValueInput {
    margin-bottom: 4px;
}



.booleanPanel .actions-right .additionalLinkListInline {
    margin-top: 0px;
}

.valuePanel .actions-right .additionalLinkListInline,
.valueChoicesSelect2Panel .actions-right .additionalLinkListInline,
.stringPanel .actions-right .additionalLinkListInline,
.referencePanel .actions-right .additionalLinkListInline,
.isisBlobPanel .actions-right .additionalLinkListInline {
    margin-top: 5px;
}


.popover.confirmation .btn-group .btn {
    width: 100%;
    margin: 5px;
    padding: 5px;
}

.entityHeaderPanel .entityActions ul.additionalLinkList li.additionalLinkItem {
    padding-top: 3px;
    /*padding-bottom: 7px;*/
}

.propertyEditForm .buttons .wicket-ajax-indicator,
.actionParametersForm .buttons .wicket-ajax-indicator,
.additionalLinkList .wicket-ajax-indicator {
    margin-left: 4px;
    margin-right: 10px;
}

.additionalLinkList .wicket-ajax-indicator img {
    margin-top: 7px;
    margin-left: -5px;
    margin-right: 10px;
}

.select2-container-multi.input-sm {
    height: inherit;
}

li.select2-results__option {
    min-height: 30px;
}

.scalarNameAndValueComponentType .inlinePromptForm {
    border: 2px solid;
    padding: 10px;
    margin-bottom: 20px
}

.scalarNameAndValueComponentType .inlinePromptForm .form-group {
    padding-left: 5px;
    padding-right: 15px;
}

.booleanPanel .form-control.scalarValueInlinePromptLink,
.referencePanel .form-control.scalarValueInlinePromptLink {
    display: inline-flex;
    width: 85%;
}

a.form-control.scalarValueInlinePromptLink {
    text-decoration: none;
    overflow: hidden;
}

.booleanPanel div.label-left .scalarValueWrapper .form-control.scalarValueInlinePromptLink,
.referencePanel div.label-left .scalarValueWrapper .form-control.scalarValueInlinePromptLink {
    width: 90%;
}
.booleanPanel div.label-left.actions-right .scalarValueWrapper .form-control.scalarValueInlinePromptLink,
.referencePanel div.label-left.actions-right .scalarValueWrapper .form-control.scalarValueInlinePromptLink {
    width: 85%;
}

.referencePanel .inlinePrompt .entityIconAndTitlePanel .entityImage {
    margin-right: 10px;
}
.referencePanel .inlinePrompt .entityIconAndTitlePanel .entityTitle {
    display: none;
}

/*
instead of this CSS (which would force this highlighting everywhere, instead suggest use a browser extension
such as https://chrome.google.com/webstore/detail/focus-indicator/heeoeadndnhebmfebjccbhmccmaoedlf

#container  a:focus,
#container  .btn:focus,
#container  input:focus,
#container  :focus {
    outline-color: maroon;
    outline-style: solid;
    outline-width: 2px;
}

#container  a.edit:focus {
    padding: 3px;
}
*/

#container.page #wicketDebugBar {
    padding-top: 60px;
    padding-bottom: 30px;
}
#container.page #wicketDebugBar a#wicketDebugBarCollapse img {
    margin-top: 2px;
    margin-right: 20px;
}
#container.page #wicketDebugBar span#wicketDebugBarContents > span {
    vertical-align: sub;
}
#container.page #wicketDebugBar span.wicketversioncontrib {
    display: none;
}
#container.page #wicketDebugBar span#wicketDebugBarContents a img {
    margin-top: -5px;
}
#container.page #wicketDebugBar span#wicketDebugBarContents a#wicketDebugBarRemove img {
    margin-top: 2px;
}

/* ISIS-1626, confirmation dialog for no-parameter menu actions
   allow confirmation dialog popup to escape boundaries of parent html li element*/
.popover .open > .dropdown-menu {
  overflow: visible;
}

.aboutPanel .aboutMessage {
    font-size:1.2em;
    margin-left:50px;
    margin-right:50px;
    padding: 10px;
}

.aboutPanel .applicationName,
.aboutPanel .applicationVersion {
    text-align:center;
}

.aboutPanel .applicationName,
.aboutPanel .applicationVersion,
.aboutPanel .aboutMessage {
    background:#FFFFFF;
    border-radius:4px;
    -moz-border-radius:4px;
    -webkit-border-radius:4px;
    padding: 5px;
    display: block;
}


h4.iconAndTitle a {
    outline: none;
    display: inline-block;
    text-decoration: none;
}
h4.iconAndTitle a span.entityTitle:focus {
    outline: none;
}

h4.iconAndTitleLabel a:hover {
	text-decoration: underline;
}

li.list-separator {
	border-top: 1px solid rgba(0,0,0,0.2);
	padding-top: .4em;
	margin-top: .4em;
}

.sectionLabel {
	opacity: 0.5;
	margin-left: 0.8em;
	margin-top: 0.5em;
}

.list-inline > li {
    padding-left: 0px;
    padding-right: 0px;
}

.list-inline > li.additionalLinkItem {
    padding-left: 0.4em;
    margin: 1px;
}

ul.sidebar-nav {
    padding-bottom: 62px;
    margin-bottom: 62px;
}

div.sidebar-panel div.extra-content {
    margin-top: 30px;
}

/*checkbox checked color fix*/
.cbx .fa-check {
    color: green;
}

ul.tertiary li.dropdown img.avatar {
    max-height: 40px;
    margin-top: -13px;
    padding-left: 15px;
    padding-right: 5px;
}
/* ... */

